--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-498.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 未知国家-2.79MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 77a81e4d-2f3d-4005-857e-4ba60140a539, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: vietnam.hn15.shopvpn.net}}
   - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.42MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 中国-860.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-818.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-162.4KB/s(Youtube:不良林), server: n24.emovpn.xyz, port: 1274, type: ss, cipher: chacha20-ietf-poly1305, password: a6a6d724-c1ad-4c18-aa07-b784b34491a9}
   - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇫🇷 法国-2.48MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-7.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇨🇳 中国-538.9KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-498.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
       - 未知国家-2.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-538.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-498.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
       - 未知国家-2.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-538.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-498.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
       - 未知国家-2.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-538.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-498.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
       - 未知国家-2.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-538.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-498.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
       - 未知国家-2.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-538.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-498.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
       - 未知国家-2.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-538.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-498.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.93MB/s(Youtube:不良林)
       - 未知国家-2.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-538.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
