--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-191.5KB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
-  - {name: 🇨🇳 中国-6.55MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
   - {name: 🇺🇸 美国-436.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-508.5KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-191.5KB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-879.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇭🇰 香港-488.5KB/s(Youtube:不良林), server: cm01.db-link.in, port: 443, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
   - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
