--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
-  - {name: 🇺🇸 美国-436.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-508.5KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
   - {name: 🇩🇪 德国-191.5KB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-879.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-488.5KB/s(Youtube:不良林), server: cm01.db-link.in, port: 443, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
-  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-436.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-499.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-615.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇫🇷 法国-546.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.59MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-499.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-615.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-546.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-499.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-615.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-546.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-499.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-615.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-546.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-499.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-615.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-546.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-499.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-615.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-546.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-499.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-615.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-546.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-191.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-879.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-488.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-436.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-499.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-615.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-546.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-767.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
